# esp32-p4-vnc-viewer

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: build-firmware.yml
main/: CMakeLists.txt  idf_component.yml  main.c  ota_update.c  ota_update.h  rfb_client.c  rfb_client.h  serial_cli.c  serial_cli.h  vnc_config.c  vnc_config.h  vnc_display.c  vnc_display.h  vnc_setup_ui.c  vnc_setup_ui.h  wifi_connect.c  wifi_connect.h  wifi_creds.c  wifi_creds.h  wifi_manager.c  wifi_manager.h  wifi_setup_ui.c  wifi_setup_ui.h
