idf_component_register(
    SRCS
        "main.c"
        "wifi_creds.c"
        "wifi_manager.c"
        "wifi_setup_ui.c"
        "vnc_config.c"
        "vnc_setup_ui.c"
        "rfb_client.c"
        "vnc_display.c"
    INCLUDE_DIRS "."
    REQUIRES
        esp_wifi
        esp_netif
        nvs_flash
        esp_lcd
        esp_lcd_touch
        mbedtls
        lwip
        driver
        esp_lvgl_port
        lvgl
)
